oxiplate-derive/tests/broken/extends/missing-template-name.stderr
error: Expected string containing path to template to extend
 --> tests/broken/extends/missing-template-name.rs:4:33
  |
4 | #[oxiplate_inline(r#"{% extends %}"#)]
  |                                 ^^
